# pulse

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: index.html
frontend/css/: pulso.css
frontend/js/: config.js
frontend/js/api/: client.js
frontend/js/data/: contagion.js  fixtures.js  mexico-outline.js  mexico.js
frontend/js/engine/: edge-generator.js  node-generator.js  particle-system.js  wave-animator.js
frontend/js/renderer/: canvas-renderer.js  glow-effects.js  zoom-controller.js
frontend/js/ui/: emotion-filter.js  event-input.js  news-feed.js  tooltip.js
pulso/: __init__.py  __main__.py  cli.py  config.py  scheduler.py
pulso/api/: __init__.py  app.py  middleware.py  routes.py  security.py
pulso/data/: __init__.py  contagion.py  event_rules.py  fixtures.py  mexico_states.py
pulso/engine/: __init__.py  cache.py  cleanup.py  consistency.py  input_guard.py  keyword_simulator.py  sentiment.py  simulation.py
pulso/models/: __init__.py  database.py  db.py  schemas.py
pulso/news/: __init__.py  fetcher.py  mock_headlines.py  processor.py
pulso/providers/: __init__.py  base.py  deepseek.py  gemini.py  mock.py
tests/: test_api.py  test_cache.py  test_cleanup.py  test_current_state_store.py  test_gemini_provider.py  test_input_guard.py  test_keyword_simulator.py  test_news_fetcher.py  test_providers.py  test_rate_limit.py  test_schemas.py  test_sentiment.py  test_simulation.py  test_simulation_llm_fallback.py
